# hotglue-smoke-test

./: README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: lint.yml  release-pypi.yml  run_tests.yml
src/hotglue_smoke_test/: __init__.py  artifacts.py  cli.py  self_check.py
src/hotglue_smoke_test/compare/: singer_output_comparator.py  state_output_comparator.py  test_configurer.py
src/hotglue_smoke_test/drivers/: case_paths.py  tap_driver.py  target_driver.py
src/hotglue_smoke_test/vcr/: __init__.py  base.py  sanitize.py  tap.py  target.py
