[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hotglue-smoke-test"
version = "0.1.0"
description = "Smoke-test harness for hotglue taps and targets: VCR runners, output comparison, and CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "vcrpy>=7.0.0",
    "freezegun>=1.5.0",
    "deepdiff>=8.0.0",
    "pytest>=8.0.0",
    "debugpy>=1.8.0",
    "faker>=24.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
hotglue-smoke-test = "hotglue_smoke_test.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
